--- a/email-templates/views/forgot-password.hbs
+++ b/email-templates/views/forgot-password.hbs
@@ -12,7 +12,7 @@
 </tr>
 <tr>
     <td style="text-align: center;">
-        <button>RESET</button>
+        <button><a href="{{{frontendURL}}}/forgot-pass?{{{actionToken}}}">RESET</a></button>
     </td>
 </tr>
 </table>
